added new pages, responsive layout, reverted basket.js.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @font-face { font-family: ntype; src: url('resources/NType82-Regular.otf'); } 
 
 h2 {
-    font-family: ntype;
+    font-family: ntype !important;
  }
